# ai-lab

./: .cursorrules  GETTING_STARTED.md  PROJECT_SUMMARY.md  STUDY_PLAN.md
ai-lab/: .gitignore  README.md  postLinkedin.py  test.py
ai-lab/enterprise_ticket_assistant/: README.md  env.example  pyproject.toml  requirements.txt
ai-lab/enterprise_ticket_assistant/config/: config.yaml
ai-lab/enterprise_ticket_assistant/docs/: ARCHITECTURE.md  ENV_SETUP.md  debug_playbook.md  evaluation.md
ai-lab/enterprise_ticket_assistant/scripts/: check_env.py  verify_install.py
ai-lab/enterprise_ticket_assistant/src/: __init__.py  main.py  mainhello.py
ai-lab/enterprise_ticket_assistant/src/agents/: agents.py
ai-lab/enterprise_ticket_assistant/src/crew/: crew.py
ai-lab/enterprise_ticket_assistant/src/tasks/: tasks.py
ai-lab/enterprise_ticket_assistant/src/utils/: env_loader.py
